Created link to GitHub

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
         </div>
       </div>
     </div>
+    <div class="fixed-bottom">
+        <a href="https://github.com/AlexandraJaap?tab=repositories">Open-source code</a> by Alexandra Jaap</div>
     <script src="src/script.js"></script>
   </body>
 </html>
